--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1025,6 +1025,21 @@ select {
 	font-family: 'ABeeZee', sans-serif;
 }
 
+.ticket {
+	border:none;
+	outline:none;
+	font-size:13px;
+	color: #777;
+	width:100%;
+	margin: 0px 0px 5px 0px;
+	padding: 12px 8px;
+	-webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -o-border-radius: 0px;
+    -webkit-appearance: none;
+	font-family: 'ABeeZee', sans-serif;
+}
+
 .grid_4{
 	float:left;
 	margin-right:10px;
