revisi jam, owner, cancel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -881,7 +881,7 @@ color:#fff;
 }
 
 .main {
-width: 55%;
+width: 45%;
 margin: 0 auto 16px;
 }
 
@@ -905,7 +905,7 @@ color: #fff;
 }
 
 .reservation-name{
-width:55%;
+width:73%;
 float:left;
 }
 
@@ -1044,6 +1044,44 @@ select {
     -o-border-radius: 0px;
     -webkit-appearance: none;
 	font-family: 'ABeeZee', sans-serif;
+}
+
+.time {
+    line-height: 30px;
+    width: 43%;
+    float: left;
+}
+
+.time h5{
+    padding: 0px;
+    padding-bottom: 0px;
+    margin: 0px;
+    padding-bottom: 10px;
+    text-align: left;
+}
+
+.time input{
+    width: 74%;
+    float: left;
+    margin-left: 10px;
+    padding: 8px 0px 7px 20px;
+}
+
+
+
+.total_ticket {
+    width: 25%;
+    float: left;
+    margin-left: 5px;
+}
+
+.total_ticket h5 {
+    padding: 0px;
+    padding-bottom: 0px;
+    padding-bottom: 0px;
+    margin: 0px;
+    padding-bottom: 10px;
+    text-align: left;
 }
 
 .grid_4{
